Image overlapping button (must be fixed)

--- a/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/style.scss
+++ b/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/style.scss
@@ -110,7 +110,7 @@ header
 
     @include breakpoint($desktop)
     {
-        margin: -2rem auto 2rem auto;
+        margin: -2.5rem auto 2rem auto;
     }
 }
 
